--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Pranava Pai N || Portfolio</title>
+    <title>Pranava Pai N || Simple Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_FQgtslJsa3BcsZMe9NpBCgjrfKKuzVLUUw&s">
 
@@ -46,6 +46,8 @@
                 <h3>Backend</h3>
                 <ul>
                     <li>Node.js</li>
+                    <li>MySQL</li>
+                    <li>SQLite</li>
                 </ul>
             </div>
             <div class="skill">
@@ -53,7 +55,7 @@
                 <ul>
                     <li>Git</li>
                     <li>GitHub</li>
-                    <li>VSCode</li>
+                    <li>Hackerrank,Unstop</li>
                     <li>Leetcode,GFG</li>
                 </ul>
             </div>
@@ -87,6 +89,8 @@
 
     <footer>
         <p>&copy; 2024 Pranav Pai N. All Rights Reserved.</p>
+        <p>Updated Few Time Ago....</p><br>
+        <p>Work In Progress</p>
     </footer>
 </body>
 </html>
