--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <ul>
                     <li>Git</li>
                     <li>GitHub</li>
-                    <li>Hackerrank,Unstop</li>
-                    <li>Leetcode,GFG</li>
+                    <li><a href ="https://www.hackerrank.com/profile/pranavpai0309"</a>Hackerrank</li>
+                    <li>Leetcode,GFG,Unstop</li>
                 </ul>
             </div>
         </div>
