--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <ul>
                     <li>Git</li>
                     <li>GitHub</li>
-                    <li><a href ="https://www.hackerrank.com/profile/pranavpai0309">Hackerrank</a></li>
+                    <li><a target="blank" href ="https://www.hackerrank.com/profile/pranavpai0309">Hackerrank</a></li>
                     <li>Leetcode,GFG,Unstop</li>
                 </ul>
             </div>
