--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h3>Tools & Platforms</h3>
                 <ul>
                     <li>Git</li>
-                    <li>GitHub</li>
+                    <li><a target="blank" href="https://github.com/Pranava-Pai-N">GitHub</li>
                     <li><a target="blank" href ="https://www.hackerrank.com/profile/pranavpai0309">Hackerrank</a></li>
                     <li>Leetcode,GFG,Unstop</li>
                 </ul>
