--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <li>Git</li>
                     <li><a target="blank" href="https://github.com/Pranava-Pai-N">GitHub</li>
                     <li><a target="blank" href ="https://www.hackerrank.com/profile/pranavpai0309">Hackerrank</a></li>
-                    <li>Leetcode,GFG,Unstop</li>
+                    <li><a target="blank" href ="https://leetcode.com/u/Pranav_pai/">Leetcode</a></li>
                 </ul>
             </div>
         </div>
