--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>
+        <p class = "raw">
             I am a 2nd-year engineering student at Sahyadri College of Engineering and Management. I have a deep interest in web development, open-source projects, and learning new technologies. I’m passionate about solving problems and constantly improving my skills.
         </p>
     </section>
