--- a/index.html
+++ b/index.html
@@ -86,18 +86,18 @@
     <label class="fs-label" for="email">Email</label>
     <input class="fs-input" id="email" name="email" required />
     <p class="fs-description">
-      This will help me respond to your query via an email.
+      Helps me reply at the earliest
     </p>
   </div>
   <div class="fs-field">
-    <label class="fs-label" for="message">Message</label>
+    <label class="fs-label" for="message" >Your Message/FeedBack</label>
     <textarea
       class="fs-textarea"
       id="message"
       name="message"
       required
     ></textarea>
-    <p class="fs-description">What would you like to discuss?</p>
+    <p class="fs-description">If you want any changes, just reach out to me </p>
   </div>
   <div class="fs-button-group">
     <button class="fs-button" type="submit">Submit</button>
@@ -105,9 +105,9 @@
 </form>
     </section>
     <footer>
-        <p>&copy; 2024 Pranav Pai N. All Rights Reserved.</p>
+        <p>&copy; 2025 Pranav Pai N. All Rights Reserved.</p>
         <p>Updated Few Time Ago....</p><br>
-        <p>Work In Progress</p>
+        <p>Work In Progress. Thank you for Visiting </p>
     </footer>
 </body>
 </html>
