Added New Project

--- a/index.html
+++ b/index.html
@@ -63,13 +63,20 @@
     </section>
 
     <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>Project 1: Portfolio Website</h3>
-            <p>Designed and developed a personal portfolio website using HTML, CSS, and JavaScript to showcase my skills and projects.</p><br>
-            <a href="index.html" class="btn">View Project</a>
-        </div>
-    </section>
+    <h2>Projects</h2>
+    <div class="project">
+        <h3>Project 1: Portfolio Website</h3>
+        <p>Designed and developed a personal portfolio website using HTML, CSS, and JavaScript to showcase my skills and projects.</p><br>
+        <a href="index.html" class="btn">View Project</a>
+    </div>
+
+    <div class="project">
+        <h3>Project 2: Global Digital Bank </h3>
+        <p>It is a user friendly banking application built using python</p><br>
+        <a href="https://github.com/Pranava-Pai-N/Global_Digital_Bank_Python" class="btn">View Project</a>
+    </div>
+</section>
+
  <section id="contact">
         <h2>Contact Me</h2>
         <form
