Added New Project

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="project">
         <h3>Project 2: Global Digital Bank </h3>
         <p>It is a user friendly banking application built using python</p><br>
-        <a href="https://github.com/Pranava-Pai-N/Global_Digital_Bank_Python" class="btn">View Project</a>
+        <a href="https://github.com/Pranava-Pai-N/Global_Digital_Bank_Python" class="btn" target="_blank">View Project</a>
     </div>
 </section>
 
