--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_FQgtslJsa3BcsZMe9NpBCgjrfKKuzVLUUw&s">
 
     <nav>
-        <div class="logo"><a target="_blank" href="https://github.com/Pranava-Pai-N">Pranav Pai N</a></div>
+        <div class="logo"><a target="_blank" href="https://github.com/Pranava-Pai-N">Pranava Pai N</a></div>
         <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
