--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h3>Tools & Platforms</h3>
                 <ul>
                     <li>Git</li>
-                    <li><a target="blank" href="https://github.com/Pranava-Pai-N">GitHub</li>
+                    <li><a target="blank" href="https://github.com/Pranava-Pai-N">GitHub</a></li>
                     <li><a target="blank" href ="https://www.hackerrank.com/profile/pranavpai0309">Hackerrank</a></li>
                     <li><a target="blank" href ="https://leetcode.com/u/Pranav_pai/">Leetcode</a></li>
                 </ul>
@@ -63,58 +63,55 @@
     </section>
 
     <section id="projects">
-    <h2>Projects</h2>
-    <div class="project">
-        <h3>Project 1: Portfolio Website</h3>
-        <p>Designed and developed a personal portfolio website using HTML, CSS, and JavaScript to showcase my skills and projects.</p><br>
-        <a href="index.html" class="btn">View Project</a>
-    </div>
+        <h2>Projects</h2>
+        <div class="project">
+            <h3>Project 1: Portfolio Website</h3>
+            <p>Designed and developed a personal portfolio website using HTML, CSS, and JavaScript to showcase my skills and projects.</p><br>
+            <a href="index.html" class="btn">View Project</a>
+        </div>
 
-    <div class="project">
-        <h3>Project 2: Global Digital Bank </h3>
-        <p>It is a user friendly banking application built using python</p><br>
-        <a href="https://github.com/Pranava-Pai-N/Global_Digital_Bank_Python" class="btn" target="_blank">View Project</a>
-    </div>
-</section>
-
- <section id="contact">
-        <h2>Contact Me</h2>
-        <form
-  action="https://formspree.io/f/xlddzwbr"
-  class="fs-form"
-  target="_top"
-  method="POST"
->
-  <div class="fs-field">
-    <label class="fs-label" for="name">Your Name</label>
-    <input class="fs-input" id="name" name="name" required />
-  </div>
-  <div class="fs-field">
-    <label class="fs-label" for="email">Email</label>
-    <input class="fs-input" id="email" name="email" required />
-    <p class="fs-description">
-      Helps me reply at the earliest
-    </p>
-  </div>
-  <div class="fs-field">
-    <label class="fs-label" for="message" >Your Message/FeedBack</label>
-    <textarea
-      class="fs-textarea"
-      id="message"
-      name="message"
-      required
-    ></textarea>
-    <p class="fs-description">If you want any changes, just reach out to me </p>
-  </div>
-  <div class="fs-button-group">
-    <button class="fs-button" type="submit">Submit</button>
-  </div>
-</form>
+        <div class="project">
+            <h3>Project 2: Global Digital Bank</h3>
+            <p>It is a user-friendly banking application built using Python.</p><br>
+            <a href="https://github.com/Pranava-Pai-N/Global_Digital_Bank_Python" class="btn" target="_blank">View Project</a>
+        </div>
     </section>
+
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <form action="https://formspree.io/f/xlddzwbr" class="fs-form" target="_top" method="POST">
+            <div class="fs-field">
+                <label class="fs-label" for="name">Your Name</label>
+                <input class="fs-input" id="name" name="name" required />
+            </div>
+            <div class="fs-field">
+                <label class="fs-label" for="email">Email</label>
+                <input class="fs-input" id="email" name="email" required />
+                <p class="fs-description">
+                    Helps me reply at the earliest
+                </p>
+            </div>
+            <div class="fs-field">
+                <label class="fs-label" for="message">Your Message/Feedback</label>
+                <textarea class="fs-textarea" id="message" name="message" required></textarea>
+                <p class="fs-description">If you want any changes, just reach out to me.</p>
+            </div>
+            <div class="fs-button-group">
+                <button class="fs-button" type="submit">Submit</button>
+            </div>
+        </form>
+    </section>
+
+  
+    <div class="fab" onclick="window.scrollTo(0, 0)">
+        ↑
+    </div>
+
     <footer>
         <p>&copy; 2025 Pranav Pai N. All Rights Reserved.</p>
-        <p>Updated Few Time Ago....</p><br>
-        <p>Work In Progress. Thank you for Visiting </p>
+        <p>Updated Few Times Ago....</p><br>
+        <p>Work In Progress. Thank you for Visiting.</p>
     </footer>
+
 </body>
 </html>
