--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <ul>
                     <li>Git</li>
                     <li><a target="blank" href="https://github.com/Pranava-Pai-N">GitHub</a></li>
-                    <li><a target="blank" href ="https://www.hackerrank.com/profile/pranavpai0309">Hackerrank</a></li>
-                    <li><a target="blank" href ="https://leetcode.com/u/Pranav_pai/">Leetcode</a></li>
+                    <li><a target="blank" href ="https://www.hackerrank.com/profile/pranavpai0309">HackerRank</a></li>
+                    <li><a target="blank" href ="https://leetcode.com/u/Pranav_pai/">LeetCode</a></li>
                 </ul>
             </div>
         </div>
