--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     </header>
 
     <section id="about">
-        <h2>About Me</h2>
+        <h2 class="textful">About Me</h2>
         <p>
             I am a 2nd-year engineering student at Sahyadri College of Engineering and Management. I have a deep interest in web development, open-source projects, and learning new technologies. I’m passionate about solving problems and constantly improving my skills.
         </p>
     </section>
 
     <section id="skills">
-        <h2>Tech Stack</h2>
+        <h2 class="textful">Tech Stack</h2>
         <div class="skills-container">
             <div class="skill">
                 <h3>Frontend</h3>
@@ -63,7 +63,7 @@
     </section>
 
     <section id="projects">
-        <h2>Projects</h2>
+        <h2 class="textful">Projects</h2>
         <div class="project">
             <h3>Project 1: Portfolio Website</h3>
             <p>Designed and developed a personal portfolio website using HTML, CSS, and JavaScript to showcase my skills and projects.</p><br>
@@ -78,7 +78,7 @@
     </section>
 
     <section id="contact">
-        <h2>Contact Me</h2>
+        <h2 class="textful">Contact Me</h2>
         <form action="https://formspree.io/f/xlddzwbr" class="fs-form" target="_top" method="POST">
             <div class="fs-field">
                 <label class="fs-label" for="name">Your Name</label>
