--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
 
     <header>
-        <h1>Hello, I'm Pranava Pai N</h1>
+        <h1 class="textful">Hello, I'm Pranava Pai N</h1>
         <p>A 2nd Year Engineering Student | Aspiring Web Developer | Tech Enthusiast</p><br>
         <a target="_blank" href="https://in.linkedin.com/in/pranav-pai-n-563106292" class="btn">Let's Connect</a>
     </header>
