--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="project">
-            Project 2: <h3 class="textful"></h3>Global Digital Bank</h3>
+            Project 2: <h3 class="textful">Global Digital Bank</h3>
             <p>It is a user-friendly banking application built using Python.</p><br>
             <a href="https://github.com/Pranava-Pai-N/Global_Digital_Bank_Python" class="btn" target="_blank">View Project</a>
         </div>
