--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
     <section id="projects">
         <h2 class="textful">Projects</h2>
         <div class="project">
-            <h3>Project 1: Portfolio Website</h3>
+            <h3 class="textfull">Project 1: Portfolio Website</h3>
             <p>Designed and developed a personal portfolio website using HTML, CSS, and JavaScript to showcase my skills and projects.</p><br>
             <a href="index.html" class="btn">View Project</a>
         </div>
 
         <div class="project">
-            Project 2: <h3 class="textful">Global Digital Bank</h3>
+            <h3 class="textfull">Project 2: Global Digital Bank</h3>
             <p>It is a user-friendly banking application built using Python.</p><br>
             <a href="https://github.com/Pranava-Pai-N/Global_Digital_Bank_Python" class="btn" target="_blank">View Project</a>
         </div>
