--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2>Tech Stack</h2>
         <div class="skills-container">
             <div class="skill">
-                <h3 class="textfull">Frontend</h3>
+                <h3>Frontend</h3>
                 <ul>
                     <li>HTML</li>
                     <li>CSS</li>
@@ -43,7 +43,7 @@
                </ul>
             </div>
             <div class="skill">
-                <h3 class="textfull">Backend</h3>
+                <h3>Backend</h3>
                 <ul>
                     <li>Node.js</li>
                     <li>MySQL</li>
@@ -51,7 +51,7 @@
                 </ul>
             </div>
             <div class="skill">
-                <h3 class="textfull">Tools & Platforms</h3>
+                <h3>Tools & Platforms</h3>
                 <ul>
                     <li>Git</li>
                     <li><a target="blank" href="https://github.com/Pranava-Pai-N">GitHub</a></li>
