--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h2>Projects</h2>
         <div class="project">
             <h3>Project 1 : <span class="textfull">Portfolio Website</span></h3>
-            <p>Designed and developed a personal portfolio website using HTML, CSS, and JavaScript to showcase my skills and projects.</p><br>
+            <p>Designed and developed a personal portfolio website using HTML and CSS to serve as a platform to showcase my skills and projects.</p><br>
             <a href="index.html" class="btn">View Project</a>
         </div>
 
