--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>A 2nd Year Engineering Student | Aspiring Web Developer | Tech Enthusiast</p><br>
         <a target="_blank" href="https://in.linkedin.com/in/pranav-pai-n-563106292" class="btn">Let's Connect</a>
     </header>
-
+    <div class="particle-container"></div>
     <section id="about">
         <h2>About Me</h2>
         <p>
