--- a/index.html
+++ b/index.html
@@ -103,9 +103,28 @@
     </section>
     <footer>
         <p>&copy; 2025 Pranav Pai N. All Rights Reserved.</p>
-        <p>Updated Few Times Ago....</p><br>
+        <p>Updated Few Minutes Ago....</p><br>
         <p>Work In Progress. Thank you for Visiting.</p>
     </footer>
+<script>
+    document.addEventListener('mousemove', function (e) {
+        createParticle(e.clientX, e.clientY);
+    });
+
+    function createParticle(x, y) {
+        const particle = document.createElement('div');
+        particle.className = 'particle';
+        particle.style.left = `${x}px`;
+        particle.style.top = `${y}px`;
+
+        document.body.appendChild(particle);
+
+        // Remove particle after animation
+        setTimeout(() => {
+            particle.remove();
+        }, 1000);
+    }
+</script>
 
 </body>
 </html>
