--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <header>
         <h1 class="textful">Hello, I'm Pranava Pai N</h1>
-        <p>A 2nd Year Engineering Student | Aspiring Web Developer | Tech Enthusiast</p><br>
+        <p id="typingEffect"></p>
         <a target="_blank" href="https://in.linkedin.com/in/pranav-pai-n-563106292" class="btn">Let's Connect</a>
     </header>
 
@@ -101,6 +101,44 @@
             </div>
         </form>
     </section>
+    <script>
+    const textArray = [
+        "2nd Year Engineering Student",
+        "Aspiring Web Developer",
+        "Tech Enthusiast",
+        "Programmer"
+    ];
+    let textIndex = 0;
+    let charIndex = 0;
+    let currentText = '';
+    let typingElement = document.getElementById('typingEffect');
+
+    function typeWriter() {
+        if (charIndex < textArray[textIndex].length) {
+            currentText += textArray[textIndex].charAt(charIndex);
+            typingElement.innerHTML = currentText + '|';
+            charIndex++;
+            setTimeout(typeWriter, 100);
+        } else {
+            setTimeout(deleteWriter, 1000); 
+        }
+    }
+
+    function deleteWriter() {
+        if (charIndex > 0) {
+            currentText = currentText.substring(0, currentText.length - 1);
+            typingElement.innerHTML = currentText + '|';
+            charIndex--;
+            setTimeout(deleteWriter, 50); 
+        } else {
+            textIndex = (textIndex + 1) % textArray.length; 
+            setTimeout(typeWriter, 500); 
+        }
+    }
+
+    typeWriter(); 
+</script>
+
     <footer>
         <p>&copy; 2025 Pranav Pai N. All Rights Reserved.</p>
         <p>Updated Few Minutes Ago....</p><br>
