--- a/index.html
+++ b/index.html
@@ -103,10 +103,13 @@
     </section>
     <script>
     const textArray = [
-        "2nd Year Engineering Student",
-        "Aspiring Web Developer",
         "Tech Enthusiast",
-        "Programmer"
+        "Programmer",
+        "Aspiring Web Developer",
+        "Keen Learner",
+        "Cyclist",
+        "Skater",
+        "Student"
     ];
     let textIndex = 0;
     let charIndex = 0;
