--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <header>
         <h1 class="textful">Hello, I'm Pranava Pai N</h1>
-        <p id="typingEffect" class="textfull"></p><br></br>
+        <p id="typingEffect" class="textful"></p><br></br>
         <a target="_blank" href="https://in.linkedin.com/in/pranav-pai-n-563106292" class="btn">Let's Connect</a>
     </header>
 
@@ -106,7 +106,6 @@
         "Tech Enthusiast",
         "Programmer",
         "Aspiring Web Developer",
-        "Keen Learner",
         "Cyclist",
         "Skater",
         "Student"
