--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@
             setTimeout(typeWriter, 500); 
         }
     }
-
-    typeWriter(); 
+        window.onload = function() {
+        setTimeout(typeWriter, 5000);
+    };
 </script>
 
     <footer>
