--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Pranava Pai N || Simple Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_FQgtslJsa3BcsZMe9NpBCgjrfKKuzVLUUw&s">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/4573/4573998.png">
 
     <nav>
         <div class="logo"><a target="_blank" href="https://github.com/Pranava-Pai-N">Pranava Pai N</a></div>
