--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         "Programmer",
         "Aspiring Web Developer",
         "Cyclist",
-        "Skater",
+        "Professional Skater",
         "Student"
     ];
     let textIndex = 0;
