--- a/index.html
+++ b/index.html
@@ -140,13 +140,29 @@
         window.onload = function() {
         setTimeout(typeWriter, 1000);
     };
-function updateClock() {
+function getRandomColor() {
+    const letters = '0123456789ABCDEF';
+    let color = '#';
+    for (let i = 0; i < 6; i++) {
+      color += letters[Math.floor(Math.random() * 16)];
+    }
+    return color;
+  }
+
+  function updateClock() {
     const clockElement = document.getElementById('neonClock');
     const now = new Date();
     const hours = String(now.getHours()).padStart(2, '0');
     const minutes = String(now.getMinutes()).padStart(2, '0');
     const seconds = String(now.getSeconds()).padStart(2, '0');
     clockElement.textContent = `${hours}:${minutes}:${seconds}`;
+    const randomColor = getRandomColor();
+    clockElement.style.color = randomColor;
+    clockElement.style.textShadow = `
+      0 0 10px ${randomColor},
+      0 0 20px ${randomColor},
+      0 0 30px ${randomColor},
+      0 0 40px ${randomColor}`;
   }
 
   setInterval(updateClock, 1000); 
