--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <label class="fs-label" for="email">Email</label>
                 <input class="fs-input" id="email" name="email" required />
                 <p class="fs-description">
-                    Helps me reply at the earliest
+                    Helps me to reply at the earliest
                 </p>
             </div>
             <div class="fs-field">
