--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
     const hours = String(now.getHours()).padStart(2, '0');
     const minutes = String(now.getMinutes()).padStart(2, '0');
     const seconds = String(now.getSeconds()).padStart(2, '0');
-    clockElement.textContent = `${hours}:${minutes}:${seconds}`;
+    const milliseconds = String(now.getMilliseconds()).padStart(3, '0'); 
+
+    clockElement.textContent = `${hours}:${minutes}:${seconds}:${milliseconds}`; 
     const randomColor = getRandomColor();
     clockElement.style.color = randomColor;
     clockElement.style.textShadow = `
@@ -155,10 +157,11 @@
       0 0 20px ${randomColor},
       0 0 30px ${randomColor},
       0 0 40px ${randomColor}`;
-  }
+}
 
-  setInterval(updateClock, 1000); 
-  updateClock(); 
+setInterval(updateClock, 100); 
+updateClock();
+
 </script>
 
     <footer>
