--- a/index.html
+++ b/index.html
@@ -147,9 +147,8 @@
     const hours = String(now.getHours()).padStart(2, '0');
     const minutes = String(now.getMinutes()).padStart(2, '0');
     const seconds = String(now.getSeconds()).padStart(2, '0');
-    const milliseconds = String(now.getMilliseconds()).padStart(2, '0'); 
-
-    clockElement.textContent = `${hours}:${minutes}:${seconds}:${milliseconds}`; 
+      
+    clockElement.textContent = `${hours}:${minutes}:${seconds}`; 
     const randomColor = getRandomColor();
     clockElement.style.color = randomColor;
     clockElement.style.textShadow = `
