--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ document.getElementById('viewCount').textContent = viewCount;
         <div id="neonClock"></div>
     <section id="views">
     <h2>Page Views</h2>
-    <p id="viewCount">0</p>
+    <p id="viewCount" class="texful">0</p>
 </section>
     </footer>
 </body>
