Added New Project

--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
             <p>It is a user-friendly banking application built using Python.</p><br>
             <a href="https://github.com/Pranava-Pai-N/Global_Digital_Bank_Python" class="btn" target="_blank">View Project</a>
         </div>
+
+        <div class="project">
+           <h3>Project 3 : <span class="textfull">Simple HTML,CSS Projects</span></h3>
+            <p>Simple HTMl Projects like Navbar,Payment Cards done using HTML and CSS.</p><br>
+            <a href="https://github.com/Pranava-Pai-N/My-HTML-Projects" class="btn" target="_blank">View Project</a>
+        </div>
     </section>
 
     <section id="contact">
