Added New Project

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="project">
            <h3>Project 3 : <span class="textfull">Simple HTML,CSS Projects</span></h3>
-            <p>Simple HTMl Projects like Navbar,Payment Cards done using HTML and CSS.</p><br>
+            <p>Simple Projects like Navbar,Payment Cards,House Renting Page done using HTML and CSS.</p><br>
             <a href="https://github.com/Pranava-Pai-N/My-HTML-Projects" class="btn" target="_blank">View Project</a>
         </div>
     </section>
