--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Pranava Pai N || Simple Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/4573/4573998.png">
+    <link rel="icon" href="https://thumbs.dreamstime.com/b/letter-p-icon-element-minimalistic-mobile-concept-web-apps-signs-symbols-collection-websites-w-design-app-white-114740240.jpg">
 
     <nav>
         <div class="logo"><a target="_blank" href="https://github.com/Pranava-Pai-N">Pranava Pai N</a></div>
