--- a/index.html
+++ b/index.html
@@ -64,22 +64,23 @@
 
     <section id="projects">
         <h2>Projects</h2>
-        <div class="project">
-            <h3>Project 1 : <span class="textfull">Portfolio Website</span></h3>
-            <p>Designed and developed a personal portfolio website using HTML and CSS to serve as a platform to showcase my skills and projects.</p><br>
-            <a href="index.html" class="btn">View Project</a>
-        </div>
 
         <div class="project">
-           <h3>Project 2 : <span class="textfull">Global Digital Bank</span></h3>
+           <h3>Project 1 : <span class="textfull">Global Digital Bank</span></h3>
             <p>It is a user-friendly banking application built using Python.</p><br>
             <a href="https://github.com/Pranava-Pai-N/Global_Digital_Bank_Python" class="btn" target="_blank">View Project</a>
         </div>
 
         <div class="project">
-           <h3>Project 3 : <span class="textfull">Simple HTML,CSS Projects</span></h3>
+           <h3>Project 2 : <span class="textfull">Simple HTML,CSS Projects</span></h3>
             <p>Simple Projects like Navbar,Payment Cards,House Renting Page done using HTML and CSS.</p><br>
             <a href="https://github.com/Pranava-Pai-N/My-HTML-Projects" class="btn" target="_blank">View Project</a>
+        </div>
+
+          <div class="project">
+           <h3>Project 3 : <span class="textfull">AI-Driven Overspeeding Detection and Fine System</span></h3>
+            <p>This project is an AI-powered system for detecting overspeeding vehicles using computer vision. It was developed as part of the PES Hackathon. </p><br>
+            <a href="https://github.com/Pranava-Pai-N/AI-DRIVEN-OVERSPEEDING-DETECTION-PES-HACKATHON" class="btn" target="_blank">View Project</a>
         </div>
     </section>
 
