--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
           <div class="project">
            <h3>Project 3 : <span class="textfull">AI-Driven Overspeeding Detection and Fine System</span></h3>
-            <p>This project is an AI-powered system for detecting overspeeding vehicles using computer vision. It was developed as part of the PES Hackathon. </p><br>
+            <p>This project is an AI-powered system for detecting overspeeding vehicles using computer vision. It was developed as a part of the PES Hackathon.</p><br>
             <a href="https://github.com/Pranava-Pai-N/AI-DRIVEN-OVERSPEEDING-DETECTION-PES-HACKATHON" class="btn" target="_blank">View Project</a>
         </div>
     </section>
