--- a/index.html
+++ b/index.html
@@ -8,16 +8,26 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/4573/4573998.png">
 
-    <nav>
-        <div class="logo"><a target="_blank" href="https://github.com/Pranava-Pai-N">Pranava Pai N</a></div>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-    
+   <nav>
+    <div class="profile-buttons">
+        <a href="https://leetcode.com/u/Pranav_pai/" target="_blank" class="btn">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png" alt="LeetCode">
+        </a>
+        <a href="https://www.hackerrank.com/profile/pranavpai0309" target="_blank" class="btn">
+            <img src="https://avatars.githubusercontent.com/u/1030588?s=200&v=4" alt="HackerRank">
+        </a>
+        <a href="https://github.com/Pranava-Pai-N" target="_blank" class="btn">
+            <img src="https://static.vecteezy.com/system/resources/previews/046/437/248/non_2x/github-logo-transparent-background-free-png.png" alt="GitHub">
+        </a>
+    </div>
+    <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
+
     <header>
         <h1 class="textful">Hello, I'm Pranava Pai N</h1>
         <p id="typingEffect" class="textfull"></p><br></br>
@@ -37,26 +47,26 @@
             <div class="skill">
                 <h3>Frontend</h3>
                 <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Tailwind CSS</li>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>Bootstrap</li>
                </ul>
             </div>
             <div class="skill">
                 <h3>Backend</h3>
                 <ul>
                     <li>Node.js</li>
-                    <li>MySQL</li>
-                    <li>SQLite</li>
+                    <li>Express JS</li>
+                    <li>Python/</li>
                 </ul>
             </div>
             <div class="skill">
-                <h3>Tools & Platforms</h3>
+                <h3>Database and other Tools</h3>
                 <ul>
-                    <li>Git</li>
-                    <li><a target="blank" href="https://github.com/Pranava-Pai-N">GitHub</a></li>
-                    <li><a target="blank" href ="https://www.hackerrank.com/profile/pranavpai0309">HackerRank</a></li>
-                    <li><a target="blank" href ="https://leetcode.com/u/Pranav_pai/">LeetCode</a></li>
+                    <li>MySQL and SQLite</li>
+                    <li>Pytorch and Tensorflow</li>
+                    <li>Flutterflow,Knime,Azure Devops</li>
+                    <li>Tesseract,YOLO,ML Entusisast</li>
                 </ul>
             </div>
         </div>
