--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     <li>HTML5</li>
                     <li>CSS3</li>
                     <li>Bootstrap</li>
+                    <li>React</li>
                </ul>
             </div>
             <div class="skill">
@@ -57,7 +58,7 @@
                 <ul>
                     <li>Node.js</li>
                     <li>Express JS</li>
-                    <li>Python/</li>
+                    <li>Python,ML Enthusiast</li>
                 </ul>
             </div>
             <div class="skill">
@@ -66,7 +67,7 @@
                     <li>MySQL and SQLite</li>
                     <li>Pytorch and Tensorflow</li>
                     <li>Flutterflow,Knime,Azure Devops</li>
-                    <li>Tesseract,YOLO,ML Entusisast</li>
+                    <li>Tesseract,YOLO</li>
                 </ul>
             </div>
         </div>
