--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <div class="project-card">
         <div class="project-content">
             <h3>Prakriti Analysis - Ayurveda</h3>
-            <p>Identification of Vata,Pitta and Kapha using XGBoost Model built as a part of ArogyaPath Project</p>
+            <p>Identification of Vata,Pitta and Kapha using Customised AI Models built as a part of ArogyaPath Project</p>
             <a href="https://github.com/Pranava-Pai-N/PrakritiAnalysis" class="btn" target="_blank">View Project</a>
         </div>
         <div class="project-image">
