--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <a href="https://www.hackerrank.com/profile/pranavpai0309" target="_blank" class="btn">
             <img src="https://avatars.githubusercontent.com/u/1030588?s=200&v=4" alt="HackerRank">
         </a>
+        <a href="https://www.codechef.com/users/pranav_pai" target="_blank" class="btn">
+            <img src="https://i.pinimg.com/474x/c5/d9/fc/c5d9fc1e18bcf039f464c2ab6cfb3eb6.jpg" alt="CodeChef">
+        </a>
         <a href="https://github.com/Pranava-Pai-N" target="_blank" class="btn">
             <img src="https://static.vecteezy.com/system/resources/previews/046/437/248/non_2x/github-logo-transparent-background-free-png.png" alt="GitHub">
         </a>
