--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="https://avatars.githubusercontent.com/u/1030588?s=200&v=4" alt="HackerRank">
         </a>
         <a href="https://www.codechef.com/users/pranav_pai" target="_blank" class="btn">
-            <img src="https://image.pngaaa.com/134/6179134-middle.png" alt="CodeChef">
+            <img src="https://img.icons8.com/?size=512&id=O4SEeX66BY8o&format=png" alt="CodeChef">
         </a>
         <a href="https://github.com/Pranava-Pai-N" target="_blank" class="btn">
             <img src="https://static.vecteezy.com/system/resources/previews/046/437/248/non_2x/github-logo-transparent-background-free-png.png" alt="GitHub">
