Feat : Added UHV Blog

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <header>
         <h1 class="textful">Hello, I'm Pranava Pai N</h1>
-        <p id="typingEffect" class="textfull"></p><br></br>
+        <p id="typingEffect" class="textfull"></p><br>
         <a target="_blank" href="https://in.linkedin.com/in/pranav-pai-n-563106292" class="btn">Let's Connect</a>
     </header>
 
@@ -45,7 +45,7 @@
     </section>
 
     <section id="skills">
-        <h2>Tech Stack</h2>
+        <h2>Tech Stack</h2><br>
         <div class="tech-carousel">
             <div class="tech-carousel-inner">
                 <img src="https://www.citypng.com/public/uploads/preview/html5-logo-icon-3d-hd-png-701751694706448mhzoib8wwh.png" alt="HTML5" data-tooltip="HTML5: Structure web content">
@@ -162,7 +162,7 @@
         <div class="project-image">
             <img src="assets/detectx.jpg" alt="DetectX - AI Powered Health Website" width="50%" height="50%">
         </div>
-    </div>
+    </div><br>
 
     <div class="project-card">
         <div class="project-content">
@@ -197,6 +197,17 @@
         </div>
     </div><br>
 
+    
+        <div class="project-card">
+        <div class="project-content">
+            <h3>UHV Blog</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum corrupti, dolores illo porro sit repellendus.</p>
+             <a href="#" class="btn">View Blog</a>
+        </div>
+        <div class="project-image">
+            <img src="https://media.licdn.com/dms/image/v2/C4E12AQFnxKmx8taBqg/article-cover_image-shrink_600_2000/article-cover_image-shrink_600_2000/0/1520123102698?e=2147483647&v=beta&t=DoxlOPJ1txP8ukChyxlOA8KA4ZGY-dMDSekjTof0H54" alt="UHV Blog">
+        </div>
+    </div><br>
 
 
 </section>
