Feat: Added blog content

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="project-card">
         <div class="project-content">
             <h3>UHV Blog</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum corrupti, dolores illo porro sit repellendus.</p>
+            <p>Competence in Professional Ethics Holistic Technologies</p>
              <a href="#" class="btn">View Blog</a>
         </div>
         <div class="project-image">
