Feat: Added blog content and changed route links

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><a href="#UHVBlog">UHV Blog</a></li>
     </ul>
 </nav>
 <div id="particle-container"></div>
@@ -198,11 +199,11 @@
     </div><br>
 
     
-        <div class="project-card">
+    <div class="project-card" id="UHVBlog">
         <div class="project-content">
             <h3>UHV Blog</h3>
             <p>Competence in Professional Ethics Holistic Technologies</p>
-             <a href="#" class="btn">View Blog</a>
+             <a href="https://medium.com/@pranavpai0309/reimagining-competence-professional-ethics-and-holistic-technologies-2deda941cbdb" class="btn" target="_blank">View Blog</a>
         </div>
         <div class="project-image">
             <img src="https://media.licdn.com/dms/image/v2/C4E12AQFnxKmx8taBqg/article-cover_image-shrink_600_2000/article-cover_image-shrink_600_2000/0/1520123102698?e=2147483647&v=beta&t=DoxlOPJ1txP8ukChyxlOA8KA4ZGY-dMDSekjTof0H54" alt="UHV Blog">
