Feat : Handled form-validation

--- a/index.html
+++ b/index.html
@@ -325,16 +325,16 @@
         <form id="contactForm" class="fs-form">
             <div class="fs-field">
                 <label class="fs-label" for="name">Your Name</label>
-                <input class="fs-input" id="name" name="name" required />
+                <input type="text" class="fs-input" id="name" name="name" required />
             </div>
             <div class="fs-field">
                 <label class="fs-label" for="email">Email</label>
-                <input class="fs-input" id="email" name="email" required />
+                <input type="email" class="fs-input" id="email" name="email" required />
                 <p class="fs-description">Helps me to reply at the earliest</p>
             </div>
             <div class="fs-field">
                 <label class="fs-label" for="message">Your Message/Feedback</label>
-                <textarea class="fs-textarea" id="message" name="message" required></textarea>
+                <textarea  class="fs-textarea" id="message" name="message" required></textarea>
                 <p class="fs-description">If you want any changes, just reach out to me.</p>
             </div>
             <div class="fs-button-group">
