--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="#UHVBlog">UHV Blog</a></li>
+            <li><a href="#UHVBlog">Blogs</a></li>
         </ul>
     </nav>
     <div id="particle-container"></div>
