--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="#UHVBlog">Blogs</a></li>
+            <li><a href="#UHVBlog">UHV Blog</a></li>
         </ul>
     </nav>
     <div id="particle-container"></div>
@@ -337,11 +337,9 @@
                 <textarea  class="fs-textarea" id="message" name="message" required></textarea>
                 <p class="fs-description">If you want any changes, just reach out to me.</p>
             </div>
-            <div class="cf-turnstile" data-sitekey="0x4AAAAAABjNyZEdtZIVs3iU"></div>
-
-  <div class="fs-button-group">
-    <button class="fs-button" type="submit">Submit</button>
-  </div>
+            <div class="fs-button-group">
+                <button class="fs-button" type="submit">Submit</button>
+            </div>
         </form>
         <div id="responseMessage" style="margin-top:1em; font-weight:bold;"></div>
     </section>
@@ -475,7 +473,6 @@ document.getElementById('contactForm').addEventListener('submit', async function
         <p>Updated Few Minutes Ago....</p><br>
         <p>Work In Progress. Thank you for Visiting.</p>
     </footer>
-    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
     </body>
 
 </html>
