Feat : Changed ArogyaPath Website Link

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <h3>ArogyaPath - AI-Driven Ayurvedic Platform for Practitioners and Enthusiasts</h3>
                 <p>Platform that connects Ayurvedic experts with users, offering personalized wellness insights and
                     holistic healthcare solutions.</p>
-                <a href="https://arogyapath-1zhu.onrender.com" class="btn" target="_blank">Launch Website</a>
+                <a href="https://arogyapaths.netlify.app" class="btn" target="_blank">Launch Website</a>
             </div>
             <div class="project-image">
                 <img src="assets/ArogyaPath Image.jpg" alt="ArogyaPath">
