Feat : Done verification using cloud console

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Pranava Pai N || Simple Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/4573/4573998.png">
+    <meta name="google-site-verification" content="T0HGjpaiGxrVfqLcdvhNC9vR5y_14cGKb_WvtN6T-A0" />
     <nav>
         <div class="profile-buttons">
             <a href="https://leetcode.com/u/Pranav_pai/" target="_blank" class="btn">
